Adiciona configuracao de cors